# py-color-lerp

./: README.md  pyproject.toml
py_color_lerp/: __init__.py  color_lerp.py
test/: test_color_lerp.py
