[tool.poetry]
name = "py-color-lerp"
version = "0.1.0"
description = ""
authors = ["Isaiah Mann <isaiahbmann@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.4"
colour = "^0.1.5"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
